[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Coworker.gd" type="Script" id=1]
[ext_resource path="res://scenes/Avatar.tscn" type="PackedScene" id=2]

[node name="Coworker" type="PanelContainer"]
margin_right = 250.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakTimer" type="Timer" parent="."]

[node name="BubbleCanvas" type="CanvasLayer" parent="."]
layer = 2

[node name="Bubble" type="PanelContainer" parent="BubbleCanvas"]
visible = false
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="BubbleCanvas/Bubble"]
margin_left = 7.0
margin_top = 7.0
margin_right = 84.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "TEXXXXXXXT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="BubbleCanvas/Bubble"]

[node name="Avatar" parent="." instance=ExtResource( 2 )]
margin_left = 7.0
margin_top = 7.0
margin_right = 243.0
margin_bottom = 229.0
[connection signal="timeout" from="SpeakTimer" to="." method="_on_speaktimer_timeout"]
[connection signal="timeout" from="BubbleCanvas/Bubble/Timer" to="." method="_on_bubble_timer_timeout"]
